dtol-elasticsearch/elasticsearch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: elasticsearch
spec:
  selector:
    matchLabels:
      run: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        run: elasticsearch
    spec:
      securityContext:
        fsGroup: 2000
      containers:
        - image: dockerhub.ebi.ac.uk/treeoflifedcc/portal-elastic/dtol-elasticsearch-s3-v4:7.13.2
          name: elasticsearch
          volumeMounts:
            - name: data
              mountPath: "usr/share/elasticsearch/data"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9300
              name: nodes
            - containerPort: 9200
              name: client
      imagePullSecrets:
        - name: ebi-docker-registry
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: es-pvc
